--- a/css/custom.css
+++ b/css/custom.css
@@ -18,30 +18,36 @@ html,body{
 	-moz-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 }
-html{scroll-behavior: smooth; overflow-x: hidden;}
-input,button,textarea{font-family: inherit; font-size: inherit;}
+html{scroll-behavior: smooth;}
+input,button,textarea{font-family: inherit; font-size: inherit; color: inherit; background: none;}
 
 input::-ms-clear{display: none;}
 button{cursor: pointer; background: none;}
 button::-moz-focus-inner {padding: 0; border: 0;}
-a, a:hover, a:visited{text-decoration: none; color: inherit;}
+a, a:hover, a:visited{text-decoration: none;}
 ul, menu{list-style: none;}
 img{vertical-align: top;}
 
 h1,h2,h3,h4,h5,h6{font-size:inherit; font-weight: 400;}
 
-/* Правильное расположение footer внизу страницы */
-body{display: flex; flex-direction: column; min-height: 100%; background: #ffffff; color: var(--main-black); font-family: 'Montserrat', sans-serif;}
-body>header{flex: 1 0 auto;}
-body>.content{flex: 1 0 auto;}
-body>footer{flex: 0 0 auto;}
+body{
+	background: var(--main-white);
+	color: var(--main-black);
+	font-family: 'Montserrat', sans-serif;
+}
+.body-overflow{
+	overflow-y: hidden;
+}
 
 /* Стили контейнеров */
-.container, .large_container{width: 100%; max-width: 1170px; margin: 0 auto; padding: 0 15px;}
+.container, .large_container{width: 100%; max-width: 1000px; margin: 0 auto; padding: 0 20px;}
 .large_container{max-width: 1920px;}
 
 /* Переменные */
 :root{
 	--main-white: #FFFFFF;
 	--main-black: #000000;
+	--main-grey: #d6d6d6;
+	--main-red: #ff0000;
+	--main-bg-black: rgba(0, 0, 0, 0.7);
 }
