--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,20 @@
 .trainers{
     margin: 50px 0 0;
 }
+.sort {
+    margin: 0 0 30px;
+}
+.sort-title {
+    font-size: 24px;
+    font-weight: 700;
+    margin: 0 0 10px;
+}
+.sort-label {
+    margin: 0 20px 0 0;
+    display: inline-flex;
+    align-items: center;
+    gap: 10px;
+}
 
 /* Modal */
 .modal {
