--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@
     background: var(--main-bg-black);
     opacity: 0;
     visibility: hidden;
+    overflow-y: auto;
     transition: opacity 0.3s;
 }
 .open-modal{
@@ -197,6 +198,12 @@
 }
 .modal__delete-button{
     background: var(--main-red);
+}
+.modal__image{
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 15px;
 }
 
 /* Media */
